Removed test files from git

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .vscode
+*.csv
+*.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,flask,git,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,flask,git,visualstudiocode
