--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .vscode
 *.csv
 *.json
+*.yaml
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,flask,git,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,flask,git,visualstudiocode
